# GestionForme

./: .gitignore  Vecteur2D.h
Tests/: testMat22.cpp
client/: CMakeLists.txt  Point2D.h  Vecteur2D.h  main.cpp
client/Chargeur/: ChargeurTxt.cpp  ChargeurTxt.h
client/Chargeur/Analyseur/: AnalyseurTxt.h  AnalyseurTxtCOR.h  AnalyseurTxtCercle.h  AnalyseurTxtGroupe.h  AnalyseurTxtPolygone.h  AnalyseurTxtSegment.h  AnalyseurTxtTriangle.h
client/Formes/: ExceptionForme.h  Forme.h  FormeSegmentee.h  Formes.h  Groupe.h
client/Formes/FormeSimple/: Cercle.h  Polygone.h  Segment.h  Triangle.h
client/Formes/Intersection/: IntersectionCercleCercle.h  IntersectionForme.h  IntersectionFormeCOR.h  IntersectionSegmentCercle.h  IntersectionSegmentSegment.h
client/Geometrie/: ExceptionGeometriePlane.h  GeometriePlane.h  Matrice22.h  Vecteur2D.h
client/InterfacesGraphiques/: ClientTCP.h  InterfaceGraphique.h
client/InterfacesGraphiques/ClientTCP/: ClientTCP.cpp  ClientTCP.h  ClientTCPException.h
client/Sauvegardeur/: SauvegardeurTxt.cpp  SauvegardeurTxt.h
client/Tests/: testMat22.cpp  testVec2D.cpp
client/Tests/Formes/FormeSimple/: testCercle.cpp  testPolygone.cpp  testSeg.cpp  testTriangle.cpp
client/Tests/Geometrie/: testGeoPlane.cpp  testMat22.cpp  testVec2D.cpp
docs/: protocol.md  rapport.md
docs/client/html/: 3_827_80_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_827_80_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  3_827_80_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  3_827_80_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  3_827_88_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_827_88_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  3_827_88_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  3_827_88_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _analyseur_txt_8h.html  _analyseur_txt_8h.js  _analyseur_txt_8h_source.html  _analyseur_txt_c_o_r_8h.html  _analyseur_txt_c_o_r_8h.js  _analyseur_txt_c_o_r_8h_source.html  _analyseur_txt_cercle_8h.html  _analyseur_txt_cercle_8h.js  _analyseur_txt_cercle_8h_source.html  _analyseur_txt_groupe_8h.html  _analyseur_txt_groupe_8h.js  _analyseur_txt_groupe_8h_source.html  _analyseur_txt_polygone_8h.html  _analyseur_txt_polygone_8h.js  _analyseur_txt_polygone_8h_source.html  _analyseur_txt_segment_8h.html  _analyseur_txt_segment_8h.js  _analyseur_txt_segment_8h_source.html  _analyseur_txt_triangle_8h.html  _analyseur_txt_triangle_8h.js  _analyseur_txt_triangle_8h_source.html  _cercle_8h.html  _cercle_8h.js  _cercle_8h_source.html  _chargeur_txt_8cpp.html  _chargeur_txt_8cpp_8o_8d.html  _chargeur_txt_8h.html  _chargeur_txt_8h.js  (+304 more)
docs/server/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  type-search-index.js
server/: build.gradle.kts
(+125 files in other folders)
